--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,26 +1,46 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+      font-family: "Courier New", Courier, monospace;
+
+      text-align: center;
 }
 
 img {
-  width: 100px;
-  height: 100px;
+      width: 100px;
+      height: 100px;
 }
 
 .title {
-  font-size: 36px;
-  font-weight: 900;
+      font-size: 36px;
+      font-weight: 900;
+      margin-bottom: 20px;
 }
 
 /* do not edit this footer */
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #eee;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 52px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #eee;
+}
+
+.container {
+      display: flex;
+      gap: 50px;
+
+      justify-content: center;
+}
+
+.element-wrapper {
+      max-width: 200px;
+
+      display: flex;
+      gap: 10px;
+
+      flex-direction: column;
+      align-items: center;
 }
